<resources>
    <string name="app_name">AstonRecyclerView</string>
    <string name="contacts">Контакты</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="cansel">Cansel</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_add_user_fragment">Внесите данные для нового контакта</string>
    <string name="id">ID:</string>
    <string name="_2322">2322</string>
    <string name="write_name_and_last_name">write name and last name</string>
    <string name="write_phone_number">write phone number</string>
    <string name="make_changes">Внесите изменения</string>
    <string name="save">Save</string>
    <string name="_null">null</string>
</resources>